--- a/Ensemble_homework.ipynb
+++ b/Ensemble_homework.ipynb
@@ -53,12 +53,10 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "from jupyterthemes import jtplot\n",
         "from sklearn.metrics import auc, roc_curve, roc_auc_score, mean_squared_error\n",
         "from sklearn.model_selection import cross_val_score, KFold\n",
         "\n",
         "%matplotlib inline\n",
-        "jtplot.style()\n",
         "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
@@ -293,19 +291,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DeeENLnyZ6vX",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "clf_lr.predict_proba(X_lin_train)[:,3]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "G_TZ9xSfS-eH",
@@ -440,8 +425,9 @@
       "source": [
         "X_meta_train = pd.DataFrame(np.stack(meta_train, axis=1), columns=col_names)\n",
         "X_meta_test = pd.DataFrame(np.stack(meta_test, axis=1), columns=col_names)\n",
+        "from sklearn.ensemble import RandomForestRegressor\n",
         "\n",
-        "clf_lr_meta = LinearRegression()\n",
+        "clf_lr_meta = RandomForestRegressor()\n",
         "clf_lr_meta.fit(X_meta_train, y_train)\n",
         "y_pred_meta_test = clf_lr_meta.predict(X_meta_test)\n",
         "\n",
@@ -521,7 +507,7 @@
         "colab": {}
       },
       "source": [
-        "pd.Series(clf_lr_meta.coef_.flatten(), index=X_meta_train.columns).plot(kind='barh')"
+        "pd.Series(clf_lr_meta.feature_importances_.flatten(), index=X_meta_train.columns).plot(kind='barh')"
       ],
       "execution_count": 0,
       "outputs": []
